--- a/config/database.yml
+++ b/config/database.yml
@@ -21,8 +21,8 @@ test:
   database: db/test.sqlite3
 
 production:
-  adapter: mysql2
-  encoding: utf8
+  adapter: postgresql
+  encoding: unicode
   database: crow
-  username: root
-  password: c008
+  username: crow
+  password: crow
